--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                	</div>
                 <p>During the summer of 2020 I completed an internship at <a href = "https://www.murex.com/" style="color: #0645AD"> <u>Murex Systems</u></a>, where I worked as a MuleSoft integration developer. </p>
                 <p>I was tasked with upgrading the message broker being used by the team (ActiveMQ 5) to its next-gen successor (ActiveMQ Artemis).</p>
-                <p> Then, I was tasked with upgrading the whole Mule runtime engine (from Mule 3 to Mule 4). This uprade was of high impact on the team's progress and daily commitments, so my job was to alleviate this effect. I isntalled the new runtime engine, developed and demo'd proof-of-concept applications in accordance with Murex's architecture, and documented all the details needed for a Mule 3 developer to upgrade the runtime engine as smoothly and efficiently as possible.
+                <p> Then, I was tasked with upgrading the whole Mule runtime engine (from Mule 3 to Mule 4). This uprade was of high impact on the team's progress and daily commitments, so my job was to alleviate this effect. I installed the new runtime engine, developed and demo'd proof-of-concept applications in accordance with Murex's architecture, and documented all the details needed for a Mule 3 developer to upgrade the runtime engine as smoothly and efficiently as possible.
                 </p>
 				
                 <h3>Contactless Heart Rate Detection</h3>
 				<img src="./assets/images/heartrate.png" width='50%' alt="flow diagram">
 
-                <p>I worked as a research assistant with Dr. <a href = "https://www.aub.edu.lb/pages/profile.aspx?memberId=zd03" style = "color: #0645AD"> <u>Zaher Dawy</u> </a> at AUB  where I was tasked to develop a computer program that can extract information about cardiovascular activity of a subject without ever touching them. This is accomplished by analyzing the varying color of pixels in video footage of a person's face.</p>
+                <p>I worked as a research assistant with Dr. <a href = "https://www.aub.edu.lb/pages/profile.aspx?memberId=zd03" style = "color: #0645AD"> <u>Zaher Dawy</u> </a> at AUB  where I was tasked to develop a computer program that can extract information about cardiovascular activity of a subject without ever touching them. This is accomplished by analyzing the varying color of pixels in video footage of a person's face. We managed to implement a prototype that could detect human heart rate accurately ± 5 bpm.</p>
 
                 
             </div>
