--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <h1>Overview</h1>
                 <hr>
-                <p>I am a Computer and Communications Engineering student at the <a href = "https://www.aub.edu.lb/" style="color: #0645AD"> <u>American University of Beirut</u></a>. My studies have helped me realize that possibilities are endless with the help of software, but also within our grasp. I admire the fact that in almost every domain or challlenge, software solutions can always make a positive impact.
+                <p>I am a Computer and Communications Engineering student at the <a href = "https://www.aub.edu.lb/" style="color: #0645AD"> <u>American University of Beirut</u></a>. My studies have helped me realize that possibilities are endless with the help of software, but they are also within our grasp. I admire the fact that in almost every domain or challenge, software solutions can always make a positive impact.
                 </p>
                 <h2>My Projects</h2>
                 <hr>
