--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <img class="project-images" src="./assets/images/bus-grid.png" width='100%' alt="bus-grid image">
                         </div>
 
-                        <p>I conceived the idea of this project as part of a course-related requirement. The application, written in Python and PyCUDA, implements a parallelized path-planning paradigm to design an efficient public transportation grid for the city of Beirut, Lebanon. This includes locating optimal bus stops around Beirut, and planning the routes for each bus, and doing all this as time-efficiently as possible.</p>
+                        <p>I conceived the idea of this project as part of a course-related requirement. The application, written in Python and PyCUDA, implements a parallelized path-planning paradigm to design an efficient public transportation grid for the city of Beirut, Lebanon. This includes locating optimal bus stops around Beirut, planning the routes for each bus, and doing all this as time-efficiently as possible.</p>
                     </div>
                     <div class='col-lg-6 col-lg-pull-9'>
                         <h3 class='text-center'>Minesweeper</h3>
