--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <img class="project-images" src="./assets/images/bus-grid.png" width='100%' alt="bus-grid image">
                         </div>
 
-                        <p>I conceived the idea of this project as part of a course-related requirement. The application, written in Python and PyCUDA, implements a parallelized path-planning paradigm to design an efficient public transportation grid for the city of Beirut, Lebanon. This includes locating optimal bus stops around Beirut, planning the routes for each bus, and doing all this as time-efficiently as possible.</p>
+                        <p>I conceived the idea of this project as part of a course-related requirement. The application, written in Python and PyCUDA, implements a parallelized path-planning paradigm to design an efficient public transportation grid for the city of Beirut, Lebanon. This includes locating optimal bus stops around Beirut, planning the routes for each bus, and doing all this as time-efficiently as possible. See the results <a href = "./assets/Optimal-Bus-Route-for-Beirut paper.pdf" style="color: #0645AD"><u>here.</u></p>
                     </div>
                     <div class='col-lg-6 col-lg-pull-9'>
                         <h3 class='text-center'>Minesweeper</h3>
@@ -74,7 +74,7 @@
                         </div>
 
                         <p>I developed a Decision Tree Model to predict key information about a piece of code from its corresponding comment block, enabling us to move from high-level natural language to a machine-friendly code skeleton through NLP features.
-                        </p>
+                        See the results <a href = "./assets/Dardish Code paper.pdf" style="color: #0645AD"><u>here.</u></p>
                     </div>
                     
 
